--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <link rel="icon" href="img/favicon.ico">
 </head>
 <body>
+    <!-- Audio in background -->
+    <audio id="bgm" preload="auto" loop>
+        <source src="audio/audio.mp3" type="audio/mpeg" />
+    </audio>
+
     <!-- Toast Notification -->
     <div id="toast" class="toast"></div>
 
@@ -827,6 +832,7 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
+    <script src="js/audio.js"></script>
 </body>
 </html>
